--- a/gb/16/9/26/n8339211.md
+++ b/gb/16/9/26/n8339211.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uemdlg368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>何清涟：德国的戏剧：默克尔王座下的民意基础</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/ebf2b7565317c720e8d88e41e1114d33-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2016年09月26日讯】9月19日，<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>总理<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E9%BB%98%E5%85%8B%E5%B0%94.md#1">默克尔</a>在本党柏林败选后不得不表示：如果可能的话，她希望时光倒流，以便重新制定其<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>政策。因为近一年对德国有密集观察，我认为，昔日“欧洲女王”的这番话，与其说是缘于她对难民政策有真正的悔意，不如说缘于王座不稳产生的危机感。因为柏林毕竟是德国左派大本营，那地方原本没有德国选择党（AfD）一点立足之地，基民党败选可视为德国政治的转折点。</p>
-<p><strong><ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E9%BB%98%E5%85%8B%E5%B0%94.md#1">默克尔</a>的<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>政策有民意基础</strong></p>
-<p>有人将<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>的难民困境归因于默克尔一人，但我认为，德国陷入难民危机，有默克尔个人的因素，但她绝非一个人在“战斗”，支持她守住难民政策的支柱力量，主要有本国一众左派，以及德国公法媒体罔顾事实的赞歌；给她信心的，是欧美长期奉行、且已意识形态化的“政治正确”霸权，以及世界左派的一片喝采声。她在这些力量为她搭建的空中舞台上陶醉不已，璀璨的舞台灯光让她完全不愿意看舞台下的冷峻现实。</p>
+	<p>【大纪元2016年09月26日讯】9月19日，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>总理<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%BB%98%E5%85%8B%E5%B0%94.md#1">默克尔</a>在本党柏林败选后不得不表示：如果可能的话，她希望时光倒流，以便重新制定其<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>政策。因为近一年对德国有密集观察，我认为，昔日“欧洲女王”的这番话，与其说是缘于她对难民政策有真正的悔意，不如说缘于王座不稳产生的危机感。因为柏林毕竟是德国左派大本营，那地方原本没有德国选择党（AfD）一点立足之地，基民党败选可视为德国政治的转折点。</p>
+<p><strong><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%BB%98%E5%85%8B%E5%B0%94.md#1">默克尔</a>的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%9A%BE%E6%B0%91.md#1">难民</a>政策有民意基础</strong></p>
+<p>有人将<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>的难民困境归因于默克尔一人，但我认为，德国陷入难民危机，有默克尔个人的因素，但她绝非一个人在“战斗”，支持她守住难民政策的支柱力量，主要有本国一众左派，以及德国公法媒体罔顾事实的赞歌；给她信心的，是欧美长期奉行、且已意识形态化的“政治正确”霸权，以及世界左派的一片喝采声。她在这些力量为她搭建的空中舞台上陶醉不已，璀璨的舞台灯光让她完全不愿意看舞台下的冷峻现实。</p>
 <p>默克尔宣布接收难民是在2015年9月5日，估计很多人都“忘了”两个多月之前发生的一件事情。7月16日，德国电视一台一个谈话节目中，来自黎巴嫩的巴勒斯坦裔难民小女孩里姆在节目中向默克尔陈情，她一家人从黎巴嫩到德国避难已经4年，很可能被遣返。针对里姆的述说，默克尔回答说：“我明白你的意思。但有时，政治就是很残酷。你要知道，黎巴嫩的巴勒斯坦难民营里有成千上万人。如果我们说‘你们都来吧’、‘你们都从非洲来吧’，我们将无法承受。有些人必须要回去。”这一回答令里姆当场哭泣。这段2分钟的视频让默克尔受到了汹涌如潮的指责，认为她太冷血。</p>
 <p>8月24日，内政部属下的移民局经政府同意，不再按德国基本法给予避难的个人权利的条款，对叙利亚申请避难者单个进行审理，而是给予所有叙利亚人庇护，将“都柏林规则”废除，且移民局还将此内部操作方式于8月25日在推特上公开。此外，德国还撤销了驱逐此前避难被拒的叙利亚难民的决定。9月5日，默克尔下令开放边境，让所有难民进入。她的这一决定得到欧盟委员会的支持，被誉为“尊重欧洲团结大局的一举”，全世界的左派更是为之沸腾，美国、加拿大、澳大利亚等多国政府首脑纷纷向默克尔表示敬意，并声明要向德国学习，欢迎难民来本国。</p>
 <p>面对这种排山倒海的赞誉，欧洲女王默克尔很难再保持冷静，面对接收无上限的犹疑，她在9月20号信心十足地宣称“我们能做到”。德国民间的“欢迎文化”成为主流，民调显示，86%以上的德国人都表示欢迎，谁要是提出疑问，重则被骂为纳粹、种族主义，轻则被斥责为没有人道关怀。一些德国专家更是争先恐后地论证：难民将极大地解决德国劳动力短缺的问题，甚至臆想出叙利亚难民中有不少医生、工程师等受过良好专业教育的人。有报导说，根据联合国高级难民专员的统计，如今身处希腊的叙利亚难民，竟有高达40%的人受过大学教育。他们中有很多人会说英语，这就减少了生活工作等交流上的障碍。而实际上，开姆尼茨工大的研究显示：自愿参加智力测试的受过高等教育的难民，即对德国民众所宣传的“难民工程师”，实际水平只相当于实科学校水平。ifo研究所教育经济学W??mann教授的调查显示，只有10%的难民是受过高等教育，其余基本不会读写，是母语功能性文盲。</p>
@@ -32,42 +32,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/5/n8171441.md#1">默克尔收容难民 支持度再度下滑</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/23/n8229241.md#1">默克尔提议与北非协议 送回难民</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/26/n8240513.md#1">访捷克谈难民危机 默克尔险遭暗杀</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/31/n8254907.md#1">G20峰会 奥习会将涉敏感议题</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/5/n8171441.md#1">默克尔收容难民 支持度再度下滑</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/23/n8229241.md#1">默克尔提议与北非协议 送回难民</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/26/n8240513.md#1">访捷克谈难民危机 默克尔险遭暗杀</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/31/n8254907.md#1">G20峰会 奥习会将涉敏感议题</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648920.md#1" target="_blank">俞心诚：凯撒之死</a></li><li><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7544340.md#1" target="_blank">大陆律师在法庭上揭穿“天安门自焚”伪案</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450997.md#1">大千世界无奇不有 人死去百年竟能复活</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/25/n12429391.md#1">奥妙莫名中秋节神迹  搭起仙凡之桥</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12458679.md#1">【西岸观察】保守vs激进 副总统辩论更有看头</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12458350.md#1">【十字路口】国民党反共？中共海外大势已去</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12459514.md#1">【珍言真语】梁家杰：贺知义临危受命 喜忧参半</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450596.md#1">【最新疫情10.5】川普已经回到白宫</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454388.md#1">华春莹酸川普医疗待遇特殊 网民拿习近平说事</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455500.md#1">受经济下滑影响 环北京燕郊房价出现大跌</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12458026.md#1">赵薇连输102场官司 将连带赔偿逾8千万元</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12452790.md#1">刘德华黄历生日 捧大盆红鸡蛋庆祝</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456850.md#1">为什么F-22这么先进的战机仍配备机炮？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456347.md#1">美国农夫心脏病发作 60个邻居帮忙收割</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/2/n12448379.md#1">坚果助防癌  3招吃得安心又不怕胖</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12453852.md#1">百年前珍贵画面：德国“会飞行的火车”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11956032.md#1">【拍案惊奇】京津冀风火连天 7常委近来反常</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/26/n8339211.htm">何清涟：德国的戏剧：默克尔王座下的民意基础</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/26/n8339211.htm">何清涟：德国的戏剧：默克尔王座下的民意基础</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uemdlg368/djy/blob/master/gb/16/9/26/n8339211.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/16/9/26/n8339211.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
